--- a/ebookGenerator/resources/StaticFiles/xpp/scss/summary_and_detailed_toc.scss
+++ b/ebookGenerator/resources/StaticFiles/xpp/scss/summary_and_detailed_toc.scss
@@ -25,6 +25,9 @@
     .toc_analytical_level>.toc_analytical_level>& {
         margin-left: #{$indent}em;
     }
+    .toc_wrapper>.generated_toc>.summary_toc>.toc_chapter>a>& {
+        display: flex !important;
+    }
 }
 
 .designator {
